[tool.poetry]
name = "coursework3"
version = "0.1.0"
description = ""
authors = ["Saysuu <skysaika@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.1"
coverage = "^7.2.1"
pytest-cov = "4.0.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
